frontend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-keycloak
  labels:
    app: frontend-keycloak
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend-keycloak
  template:
    metadata:
      labels:
        app: frontend-keycloak
    spec:
      containers:
      - name: frontend-keycloak
        image: ghcr.io/ryunchang/vue_crud_security_keycloak:master
        imagePullPolicy: Always
        ports:
        - containerPort: 80
