frontend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-keycloak
spec:
  selector:
    app: frontend-keycloak
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP
